[tool.poetry]
name = "skypro-bank-project"
version = "0.1.0"
description = ""
authors = ["Ivan Aladyshkin <sanich1552@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
